--- a/www/includes/distribusi/history-pengantaran/preview.html
+++ b/www/includes/distribusi/history-pengantaran/preview.html
@@ -99,11 +99,8 @@
     }
 </style>
 
-<div class="pusatriyal-submit btn-group">
-  		<button type="button" class="btn btn-success" id="antar" pusatriyal-target="includes/distribusi/pencatatan-retail/preview-tracking.html" pusatriyal-role="routing" onclick="antar()">Antar</button>
-</div>
 <div class="breadcrumb-pusatriyal">
-  <span class="active">Preview Retail</span>
+  <span class="active">Preview</span>
 </div>
 <form id="opname-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
 <input type="hidden" name="_token" id="_token">
@@ -413,11 +410,6 @@
 					}
 		});
 	}
-
-    function antar(){
-      sr_id = $('#sr_id').val();
-      start(sr_id, 'R');
-    }
 
   </script>
 </div>
