--- a/www/includes/distribusi/jadwal-pengantaran-corporate/preview.html
+++ b/www/includes/distribusi/jadwal-pengantaran-corporate/preview.html
@@ -100,10 +100,10 @@
 </style>
 
 <div class="pusatriyal-submit btn-group">
-  		<button type="button" class="btn btn-success" id="antar" pusatriyal-target="includes/distribusi/pencatatan-retail/preview-tracking.html" pusatriyal-role="routing" onclick="antar()">Antar</button>
+  		<button type="button" class="btn btn-success" id="antar" pusatriyal-target="includes/distribusi/jadwal-pengantaran-corporate/preview-tracking.html" pusatriyal-role="routing" onclick="antar()">Antar</button>
 </div>
 <div class="breadcrumb-pusatriyal">
-  <span class="active">Preview Retail</span>
+  <span class="active">Preview</span>
 </div>
 <form id="opname-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
 <input type="hidden" name="_token" id="_token">
@@ -416,7 +416,7 @@
 
     function antar(){
       sr_id = $('#sr_id').val();
-      start(sr_id, 'R');
+      start(sr_id, 'C');
     }
 
   </script>
