--- a/www/includes/distribusi/menu-distribusi-corporate.html
+++ b/www/includes/distribusi/menu-distribusi-corporate.html
@@ -51,7 +51,8 @@
 <div class="list-group list-group-flush">
   <a pusatriyal-role='routing' style="cursor:pointer;" pusatriyal-target='includes/distribusi/pencatatan-agen/pencatatan-agen.html' class="list-group-item list-group-item-action listx">Pencatatan & Pengelolaan Agen</a>
   <a pusatriyal-role='routing' style="cursor:pointer;" pusatriyal-target='includes/distribusi/penjualan-corporate/penjualan-corporate.html' class="list-group-item list-group-item-action listx">Penjualan Corporate</a>
-  <a pusatriyal-role='routing' style="cursor:pointer;" pusatriyal-target='includes/distribusi/penjualan-corporate/pencatatan-corporate.html' class="list-group-item list-group-item-action listx">Jadwal Pengantaran Corporate</a>
+  <a pusatriyal-role='routing' style="cursor:pointer;" pusatriyal-target='includes/distribusi/jadwal-pengantaran-corporate/index.html' class="list-group-item list-group-item-action listx">Jadwal Pengantaran Corporate</a>
+  <a pusatriyal-role='routing' style="cursor:pointer;" pusatriyal-target='includes/distribusi/history-pengantaran-corporate/history-pengantaran.html' class="list-group-item list-group-item-action listx">History Pengantaran</a>
 </div>
 
 </div>
