--- a/www/includes/distribusi/pencatatan-retail/pencatatan-retail.html
+++ b/www/includes/distribusi/pencatatan-retail/pencatatan-retail.html
@@ -95,7 +95,7 @@
           rawcontent = $('rawcontent.datalist').html();
           for(x = 0;x < units.data.length;x++) {
             unit = units.data[x];
-            if (unit.sr_jenis == 'PEMESANAN') {
+            if (unit.sr_jenis == 'PEMESANAN' && unit.sr_type == 'R') {
             content = $(rawcontent);
             var classnameb = unit.sr_status_pembayaran == 1 ? 'badge badge-success card-info-second' : 'badge badge-danger card-info-second';
             var textb = unit.sr_status_pembayaran == 1 ? 'Terbayar' : 'Belum Terbayar';
@@ -200,7 +200,7 @@
           rawcontent = $('rawcontent.datalist').html();
           for(x = 0;x < units.data.length;x++) {
             unit = units.data[x];
-            if (unit.sr_jenis == 'PEMESANAN') {
+            if (unit.sr_jenis == 'PEMESANAN' && unit.sr_type == 'R') {
             content = $(rawcontent);
             var classnameb = unit.sr_status_pembayaran == 1 ? 'badge badge-success card-info-second' : 'badge badge-danger card-info-second';
             var textb = unit.sr_status_pembayaran == 1 ? 'Terbayar' : 'Belum Terbayar';
@@ -313,8 +313,7 @@
 
     $('#netto').val(get_currency(json.sr_net));
 
-    petugas = parseInt(localStorage.getItem('m_id')) == undefined ? parseInt(localStorage.getItem('m_id')) : 1;
-    if (localStorage.getItem('m_id') == undefined) {
+    if (localStorage.getItem('m_id') == 'undefined') {
       petugas = 1;
     } else {
       petugas = localStorage.getItem('m_id');
