preview jadwalpengambilan fixed

--- a/www/includes/kulakan/jadwal_pengambilan/preview-jadwalpengambilan.html
+++ b/www/includes/kulakan/jadwal_pengambilan/preview-jadwalpengambilan.html
@@ -206,7 +206,7 @@
                 <div class="card-footer text-right">
                   <label>
                     <span>Total Harga : </span>
-                    <span class="font-weight-bold" class="total_harga"></span>
+                    <span class="font-weight-bold total_harga"></span>
                   </label>
                 </div>
               </div>
