--- a/platforms/browser/www/includes/kulakan/menu-kulakan.html
+++ b/platforms/browser/www/includes/kulakan/menu-kulakan.html
@@ -45,9 +45,14 @@
 </style>
 
 
-<h5 class="title-edit">Kulakan</h5>
+<h5 class="title-edit">Stock</h5>
 <div class="list-group list-group-flush">
-  <a href="#" pusatriyal-role="routing" pusatriyal-target="includes/kulakan/jadwal_pengambilan/index-jadwalpengambilan.html" class="list-group-item list-group-item-action listx">Jadwal Pengambilan</a>
+  <a href="#" class="list-group-item list-group-item-action listx">Listing Data Pecahan pada Pusat Riyal</a>
+  <a href="#" class="list-group-item list-group-item-action listx">Listing Data Pecahan pada Petugas Pusat Riyal</a>
+  <a href="#" class="list-group-item list-group-item-action listx">Listing Data Pecahan pada Outlet Pusat Riyal</a>
+  <a href="#" class="list-group-item list-group-item-action listx">Listing Data Pecahan pada Petugas Outlet Pusat Riyal</a>
+  <a href="#" class="list-group-item list-group-item-action listx">Listing Data Pecahan pada Proses Pengiriman</a>
+  <a href="#" class="list-group-item list-group-item-action listx">Listing Data Pecahan pada Kegiatan Titip Dana</a>
 </div>
 
 </div>
