--- a/platforms/browser/www/includes/distribusi/jadwal-pengantaran-corporate/preview-tracking.html
+++ b/platforms/browser/www/includes/distribusi/jadwal-pengantaran-corporate/preview-tracking.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
+<div>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 
 <style>
@@ -9,17 +7,13 @@
 #mapid { height: 100%; margin-top: 20px; }
 
 </style>
-
-</head>
-
-<body>
 <div class="pusatriyal-submit btn-group">
-  		<button type="button" class="btn btn-success" id="selesai" onclick="selesai()">Selesai</button>
+      <button type="button" class="btn btn-success" id="selesai" onclick="selesai()">Selesai</button>
 </div>
 <div id="mapid"></div>
-<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 
 <script>
+alert('Tracking');
 var interval;
 $(document).ready(function(){
   getdata();
@@ -54,8 +48,9 @@ function getdata(){
   });
 }
 
+map = L.map('mapid');
 function getmap(response, count){
-  var map = L.map('mapid').setView([response[count - 1].cdt_latitude, response[count - 1].cdt_longitude], 13);
+  map = map.setView([response[count - 1].cdt_latitude, response[count - 1].cdt_longitude], 13);
   L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
   }).addTo(map);
@@ -87,6 +82,6 @@ function selesai(){
 
 </script>
 
-</body>
+</div>
 
-</html>
+
