--- a/platforms/browser/www/includes/manasik/pelaksanaan_manasik/index-pelaksanaan.html
+++ b/platforms/browser/www/includes/manasik/pelaksanaan_manasik/index-pelaksanaan.html
@@ -53,9 +53,9 @@
   <a href="#" class="list-group-item list-group-item-action listx"  
   pusatriyal-role='routing' pusatriyal-callback='notif' 
   pusatriyal-target='includes/manasik/pelaksanaan_manasik/tab_pelaksanaan_manasik/index-tab-pelaksanaan.html'>List Pelaksanaan Kegiatan Manasik</a>
-  <a href="#" class="list-group-item list-group-item-action listx" 
+<!--   <a href="#" class="list-group-item list-group-item-action listx" 
   pusatriyal-role='routing' 
-  pusatriyal-target='includes/manasik/pelaksanaan_manasik/tab_produk_dikembalikan/index-tab-dikembalikan.html'>Produk yang dikembalikan</a>
+  pusatriyal-target='includes/manasik/pelaksanaan_manasik/tab_produk_dikembalikan/index-tab-dikembalikan.html'>Produk yang dikembalikan</a> -->
   
 </div>
 
