--- a/www/includes/manasik/penjualan_manasik/form-penjualan-manasik.html
+++ b/www/includes/manasik/penjualan_manasik/form-penjualan-manasik.html
@@ -104,7 +104,7 @@
 </style>
 
 <div class="pusatriyal-submit btn-group">
-  
+
   <button class="btn btn-primary rounded-btn" id="btn-simpan" >
     <i class="fa fa-check"></i>
   </button>
@@ -130,31 +130,50 @@
         <label for="customer" class="label-for">Nama Pembeli</label><br>
         <div class="border-bottom border-bottom-1">
           <select id="idcus" name="idcus" class="form-control-plaintext">
-            
+
           </select>
         </div>
     </div>
 
     <div class="form-group">
       <label class="label-for" >Nomor HP Pembeli</label><br>
-      
+
       <input type="text" class="form-control" readonly="" name="nohp" id="nohp">
-      
+
     </div>
 
     <div class="form-group">
       <label class="label-for" >Alamat Pembeli</label><br>
-      
+
       <textarea class="form-control" readonly="" name="alamat" id="alamat"></textarea>
-      
+
     </div>
 
     <div class="form-group">
       <label class="label-for" >Petugas</label><br>
       <input type="text" class="form-control" readonly="" name="" id="namapetugas">
       <input type="hidden" name="idpetugas" id="idpetugas">
-      
+
     </div>
+
+    <div class="form-group">
+      <label>Penjualan Berdasarkan</label><br>
+      <select class="select2 form-control" id="berdasarkan" name="berdasarkan" onchange="getberdasarkan()">
+        <option value="pecahan">Pecahan</option>
+        <option value="paket">Paket</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label>Rate Yang Berlaku</label><br>
+      <select class="select2 form-control" name="rate" id="rate">
+
+      </select>
+    </div>
+
+        <input type="hidden" name="paket" id="paket" class="form-control" value="">
+        <div id="hiddeninput">
+        </div>
 
 </form>
     <fieldset class="m-3">
@@ -167,29 +186,29 @@
         </div>
       </div>
 
-      <div class="form-group">
+      <div class="form-group" id="divharga">
         <label>Harga Barang</label>
-        
+
         <input type="text" class="form-control" name="" id="harga" readonly="">
-        
+
       </div>
 
 
-      <div class="form-group">
+      <div class="form-group" id="divstock">
         <label>Stok Barang</label>
-        
+
         <input type="text" class="form-control" name="" id="stok" readonly="">
-        
+
       </div>
 
-      <div class="form-group">
+      <div class="form-group" id="divstockantrian">
         <label>Stok Antri</label>
-        
+
         <input type="text" class="form-control" name="" id="stokantri" readonly="">
-        
+
       </div>
 
-      <div class="form-group">
+      <div class="form-group" id="divqty">
         <label>Qty</label>
         <div class="border-bottom border-bottom-1">
           <input type="number" class="form-control-plaintext" name="qty" id="qtyenter">
@@ -208,8 +227,76 @@
     <div id="div-produk-dibawa" style="margin-bottom: 25mm">
 
     </div>
-</form>     
-    
+    <div id="div-paket-dibawa" style="margin-bottom: 25mm">
+
+    </div>
+</form>
+
+<rawkonten class="datalist">
+        <div class="accordion">
+          <div class="card">
+            <div class="card-header bg-success header-collapse p-0" id="headingOne">
+              <h5 class="mb-0">
+                <button class="btn btn-link btn-block btn-header text-white collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  BRG/0001 - 10 Riyal
+                </button>
+                <input type="hidden" name="iditem[]">
+                <input type="hidden" name="item[]">
+                <input type="hidden" class="nilairiyal" name="">
+
+              </h5>
+            </div>
+
+            <div id="collapseOne" class="collapse datalist-collapse" aria-labelledby="headingOne" data-parent="#div-produk-dibawa">
+              <div class="card">
+                <div class="card-body card-forlist p-3">
+                  <table class="w-100">
+                    <tr>
+                      <th>
+                        <small>Harga</small>
+                      </th>
+                      <td>
+                        <input type="text" readonly="" class="form-control form-control-sm harga">
+                        <input type="hidden" name="harga[]">
+                      </td>
+                    </tr>
+                    <tr>
+                      <th>
+                        <small>Stock</small>
+                      </th>
+                      <td>
+                        <input type="number" readonly class="form-control form-control-sm" name="stok[]">
+                      </td>
+                    </tr>
+                    <tr>
+                      <th>
+                        <small>Qty</small>
+                      </th>
+                      <td>
+                        <input type="number" class="form-control form-control-sm" name="qty[]">
+                      </td>
+                    </tr>
+                    <tr>
+                      <th>
+                        <small>Jumlah Harga</small>
+                      </th>
+                      <td>
+                        <input type="text" class="form-control form-control-sm total" readonly="" >
+                        <input type="hidden" name="total[]">
+                      </td>
+                    </tr>
+                  </table>
+                </div>
+                <div class="card-footer text-right">
+                  <button class="btn btn-danger btn-sm btn-hapus-accordion"><i class="fa fa-trash-o" type="button"></i> Hapus</button>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+</rawkonten>
+
 <rawcontent class="datalist">
         <div class="accordion">
           <div class="card">
@@ -268,14 +355,14 @@
                 <div class="card-footer text-right">
                   <button class="btn btn-danger btn-sm btn-hapus-accordion"><i class="fa fa-trash-o" type="button"></i> Hapus</button>
                 </div>
-                
+
               </div>
             </div>
           </div>
         </div>
 </rawcontent>
-      
-    
+
+
 </form>
 
 <div class="modal fade" id="modal-antrian" tabindex="-1" role="dialog" aria-labelledby="status-title" aria-hidden="true">
